21.4.2
	- added steer selection on running game from the editor
	- added c06 and c07 maps

21.3.3
	- re-enabled logo display, fixed waiting for LMC jingle
	- added new version of LMC jingle
	- .mod and sfx replay should be mostly bugless by now

21.2.24
	- fixed freeze when returning from map test back to the editor
	- fixed game screen flicker before fade when testing map from the editor
	- fixed sample repeat issue in music playback

21.2.14
	- Hopefully fixed waiting for LMC morse code sfx playback
	- Added c01-c05, kriss, kross and cube maps

21.2.08
	- Fixed memory corruption when opening maps with nodes on first/last column and row
	- Minor speedup of map description display in battle menu

21.1.23
	- Fixed nodes having negative charges and related to it on-screen garbage
	- Fixed crash when exiting logo screen before LMC jingle fully played back
	- Added "kross" map to official builds

21.1.6
	- Improved "how to play" submenu
	- Fixed displaying steer options for players in battle menu, which aren't available on given map
	- Probably fixed graphical glitches in campaign summary

21.1.4
	- Added special nodes with global effect - effect scales per each controlled node
	- Added special attack node which adds flat boost to attack power
	- Added special tick node which shortens node power regen period
	- Special capacity node increases max capacity of each controlled node
	- Disabled auto alignment of paths in editor
	- Removed support for map's per-player initial stats
	- Changed format of defs.json to reflect above changes
	- Regen ticks are now defined as 1 tick = 1 frame (was: 1 tick = 5 frames)

21.1.1
	- Added "how to play screen"
	- Fixed going out of bounds in editor
	- When testing map, ESC/P buttons bring back the editor
	- Better autocalculating path direction in editor, unoptimized a bit

20.12.29
	- Fixed player HUD not being cleared after being defeated
	- Fixed being able to enter targeting mode when selecting non-owned node