@@ -1,6 +1,7 @@
 21.4.2
 	- added steer selection on running game from the editor
 	- added c06 and c07 maps
+	- when game is started from editor, it switches back to editor on end of match
 
 21.3.3
 	- re-enabled logo display, fixed waiting for LMC jingle
